--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
         <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
             <div class="carousel-item active">
-            <img src="/assets/img/estilos1.jpg" class="d-block w-100" alt="...">
+            <img src="assets/img/estilos1.jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-            <img src="/assets/img/estilos2.jpg" class="d-block w-100" alt="...">
+            <img src="assets/img/estilos2.jpg" class="d-block w-100" alt="...">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
