--- a/pages/productos.html
+++ b/pages/productos.html
@@ -55,7 +55,7 @@
     </header>
     <main>
         <section>                
-            <h2>nuestros productos fav ✨</h2>
+            <h2>productos ✨</h2>
             <div class="productos">
                 <div class="tarjetaprod">
                     <div class="card">
